--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,15 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.btn-primary{
+    @apply border-2 border-green-500 bg-green-500 text-white px-4 py-2 hover:bg-green-400 hover:text-white font-sans antialiased
+}
+
+.btn-secondary{
+    @apply border-2 border-gray-400 bg-white text-gray-900 px-4 py-2 rounded-lg font-sans antialiased hover:bg-gray-300
+}
+
+.btn-save{
+    @apply border-2 border-gray-400 bg-green-500 text-gray-900 px-4 py-2 rounded-lg hover:bg-green-400 font-sans antialiased
+}
